// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders events in different view modes with events should return list 1`] = `
Array [
  <div
    className="card__item"
  >
    <img
      alt="Event_photo"
      src="data:image/svg+xml,%3Csvg%20width%3D%22344%22%20height%3D%22194%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%3Cdefs%3E%3Cpath%20id%3D%22a%22%20d%3D%22M-1%200h344v194H-1z%22%2F%3E%3C%2Fdefs%3E%3Cg%20transform%3D%22translate(1)%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cmask%20id%3D%22b%22%20fill%3D%22%23fff%22%3E%3Cuse%20xlink%3Ahref%3D%22%23a%22%2F%3E%3C%2Fmask%3E%3Cuse%20fill%3D%22%23BDBDBD%22%20xlink%3Ahref%3D%22%23a%22%2F%3E%3Cg%20mask%3D%22url(%23b)%22%3E%3Cpath%20d%3D%22M173.65%2069.238L198.138%2027%20248%20112.878h-49.3c.008.348.011.697.011%201.046%200%2028.915-23.44%2052.356-52.355%2052.356C117.44%20166.28%2094%20142.84%2094%20113.924c0-28.915%2023.44-52.355%2052.356-52.355%2010%200%2019.347%202.804%2027.294%207.669zm0%200l-25.3%2043.64h50.35c-.361-18.478-10.296-34.61-25.05-43.64z%22%20fill%3D%22%23757575%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
    />
    <div
      className="card__item_content"
    >
      <h2
        className="card__item_header"
      >
        Vegan For Beginners Online Workshop
      </h2>
      <p
        className="card__item_description"
      >
        More and more people are interested in vegan/plant-based eating. Some are curious, some want to get their feet wet, and others are ready to come to th...
      </p>
      <div
        className="card__item_bottom-row"
      >
        <span
          className="card__item_footer"
        >
          Online
        </span>
        <span
          className="card__item_footer"
        >
          TUE, MAR 1 12:00 PM GMT+02:00
        </span>
        <label
          className="heart__icon add-favorite-list"
          htmlFor="favorite"
        >
          <button
            id="favorite"
            name="favorite"
            onClick={[Function]}
            type="button"
          >
             
          </button>
        </label>
        <label
          className="join-to-event__icon join-to-event-list"
          htmlFor="joinToEvent"
        >
          <button
            id="joinToEvent"
            name="joinToEvent"
            onClick={[Function]}
            type="button"
          >
             
          </button>
        </label>
        <a
          aria-current={null}
          className="bttn"
          href="/home/events/1"
          onClick={[Function]}
        >
          View detail
        </a>
      </div>
    </div>
  </div>,
  <div
    className="card__item"
  >
    <img
      alt="Event_photo"
      src="data:image/svg+xml,%3Csvg%20width%3D%22344%22%20height%3D%22194%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%3Cdefs%3E%3Cpath%20id%3D%22a%22%20d%3D%22M-1%200h344v194H-1z%22%2F%3E%3C%2Fdefs%3E%3Cg%20transform%3D%22translate(1)%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cmask%20id%3D%22b%22%20fill%3D%22%23fff%22%3E%3Cuse%20xlink%3Ahref%3D%22%23a%22%2F%3E%3C%2Fmask%3E%3Cuse%20fill%3D%22%23BDBDBD%22%20xlink%3Ahref%3D%22%23a%22%2F%3E%3Cg%20mask%3D%22url(%23b)%22%3E%3Cpath%20d%3D%22M173.65%2069.238L198.138%2027%20248%20112.878h-49.3c.008.348.011.697.011%201.046%200%2028.915-23.44%2052.356-52.355%2052.356C117.44%20166.28%2094%20142.84%2094%20113.924c0-28.915%2023.44-52.355%2052.356-52.355%2010%200%2019.347%202.804%2027.294%207.669zm0%200l-25.3%2043.64h50.35c-.361-18.478-10.296-34.61-25.05-43.64z%22%20fill%3D%22%23757575%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
    />
    <div
      className="card__item_content"
    >
      <h2
        className="card__item_header"
      >
        Football, Finances & Fundraising Workshop - Get top tips to help your club
      </h2>
      <p
        className="card__item_description"
      >
        The workshop will cover a range of areas including: budgeting, planning, grant funding, sponsorship, fundraising. Attendees will receive advice and id...
      </p>
      <div
        className="card__item_bottom-row"
      >
        <span
          className="card__item_footer"
        >
          Map
        </span>
        <span
          className="card__item_footer"
        >
          SUN, FEB 20 3:30 PM GMT+02:00
        </span>
        <label
          className="heart__icon add-favorite-list"
          htmlFor="favorite"
        >
          <button
            id="favorite"
            name="favorite"
            onClick={[Function]}
            type="button"
          >
             
          </button>
        </label>
        <label
          className="join-to-event__icon join-to-event-list"
          htmlFor="joinToEvent"
        >
          <button
            id="joinToEvent"
            name="joinToEvent"
            onClick={[Function]}
            type="button"
          >
             
          </button>
        </label>
        <a
          aria-current={null}
          className="bttn"
          href="/home/events/2"
          onClick={[Function]}
        >
          View detail
        </a>
      </div>
    </div>
  </div>,
  ",",
]
`;

exports[`renders events in different view modes with events should return matrix 1`] = `
Array [
  <div
    className="event-matrix"
  >
    <div
      className="event-card"
    >
      <img
        alt="Poster"
        className="event-card__poster"
        src="football-g10e9bda93_1920.jpg"
      />
      <div
        className="event-card__inner-container"
      >
        <p
          className="event-card__inner-text"
        >
          Vegan For Beginners Online Workshop
        </p>
      </div>
      <label
        className="heart__icon add-favorite-matrix"
        htmlFor="favorite"
      >
        <button
          id="favorite"
          name="favorite"
          onClick={[Function]}
          type="button"
        >
           
        </button>
      </label>
      <label
        className="join-to-event__icon join-to-event-matrix"
        htmlFor="joinToEvent"
      >
        <button
          id="joinToEvent"
          name="joinToEvent"
          onClick={[Function]}
          type="button"
        >
           
        </button>
      </label>
    </div>
    <div
      className="event-card"
    >
      <img
        alt="Poster"
        className="event-card__poster"
        src="football-g10e9bda93_1920.jpg"
      />
      <div
        className="event-card__inner-container"
      >
        <p
          className="event-card__inner-text"
        >
          Football, Finances & Fundraising Workshop - Get top tips to help your club
        </p>
      </div>
      <label
        className="heart__icon add-favorite-matrix"
        htmlFor="favorite"
      >
        <button
          id="favorite"
          name="favorite"
          onClick={[Function]}
          type="button"
        >
           
        </button>
      </label>
      <label
        className="join-to-event__icon join-to-event-matrix"
        htmlFor="joinToEvent"
      >
        <button
          id="joinToEvent"
          name="joinToEvent"
          onClick={[Function]}
          type="button"
        >
           
        </button>
      </label>
    </div>
  </div>,
  ",",
]
`;

exports[`renders events in different view modes with events should return slider 1`] = `
Array [
  <div
    className="slick-slider slick-initialized"
  >
    
    <div
      className="slick-list"
    >
      <div
        className="slick-track"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "WebkitTransform": "translate3d(0px, 0px, 0px)",
            "WebkitTransition": "",
            "msTransform": "translateX(0px)",
            "opacity": 1,
            "transform": "translate3d(0px, 0px, 0px)",
            "transition": "",
          }
        }
      >
        <div
          aria-hidden={false}
          className="slick-slide slick-active slick-center slick-current"
          data-index={0}
          onClick={[Function]}
          style={
            Object {
              "outline": "none",
              "width": 0,
            }
          }
          tabIndex="-1"
        >
          <div>
            <div
              className="event-card"
            >
              <img
                alt="Poster"
                className="event-card__poster"
                src="football-g10e9bda93_1920.jpg"
              />
              <div
                className="event-card__inner-container"
              >
                <p
                  className="event-card__inner-text"
                >
                  Vegan For Beginners Online Workshop
                </p>
              </div>
              <label
                className="heart__icon add-favorite-slider"
                htmlFor="favorite"
              >
                <button
                  id="favorite"
                  name="favorite"
                  onClick={[Function]}
                  type="button"
                >
                   
                </button>
              </label>
              <label
                className="join-to-event__icon join-to-event-slider"
                htmlFor="joinToEvent"
              >
                <button
                  id="joinToEvent"
                  name="joinToEvent"
                  onClick={[Function]}
                  type="button"
                >
                   
                </button>
              </label>
            </div>
          </div>
        </div>
        <div
          aria-hidden={false}
          className="slick-slide slick-active"
          data-index={1}
          onClick={[Function]}
          style={
            Object {
              "outline": "none",
              "width": 0,
            }
          }
          tabIndex="-1"
        >
          <div>
            <div
              className="event-card"
            >
              <img
                alt="Poster"
                className="event-card__poster"
                src="football-g10e9bda93_1920.jpg"
              />
              <div
                className="event-card__inner-container"
              >
                <p
                  className="event-card__inner-text"
                >
                  Football, Finances & Fundraising Workshop - Get top tips to help your club
                </p>
              </div>
              <label
                className="heart__icon add-favorite-slider"
                htmlFor="favorite"
              >
                <button
                  id="favorite"
                  name="favorite"
                  onClick={[Function]}
                  type="button"
                >
                   
                </button>
              </label>
              <label
                className="join-to-event__icon join-to-event-slider"
                htmlFor="joinToEvent"
              >
                <button
                  id="joinToEvent"
                  name="joinToEvent"
                  onClick={[Function]}
                  type="button"
                >
                   
                </button>
              </label>
            </div>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="slick-slide slick-center slick-cloned"
          data-index={2}
          onClick={[Function]}
          style={
            Object {
              "width": 0,
            }
          }
          tabIndex="-1"
        >
          <div>
            <div
              className="event-card"
            >
              <img
                alt="Poster"
                className="event-card__poster"
                src="football-g10e9bda93_1920.jpg"
              />
              <div
                className="event-card__inner-container"
              >
                <p
                  className="event-card__inner-text"
                >
                  Vegan For Beginners Online Workshop
                </p>
              </div>
              <label
                className="heart__icon add-favorite-slider"
                htmlFor="favorite"
              >
                <button
                  id="favorite"
                  name="favorite"
                  onClick={[Function]}
                  type="button"
                >
                   
                </button>
              </label>
              <label
                className="join-to-event__icon join-to-event-slider"
                htmlFor="joinToEvent"
              >
                <button
                  id="joinToEvent"
                  name="joinToEvent"
                  onClick={[Function]}
                  type="button"
                >
                   
                </button>
              </label>
            </div>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="slick-slide slick-cloned"
          data-index={3}
          onClick={[Function]}
          style={
            Object {
              "width": 0,
            }
          }
          tabIndex="-1"
        >
          <div>
            <div
              className="event-card"
            >
              <img
                alt="Poster"
                className="event-card__poster"
                src="football-g10e9bda93_1920.jpg"
              />
              <div
                className="event-card__inner-container"
              >
                <p
                  className="event-card__inner-text"
                >
                  Football, Finances & Fundraising Workshop - Get top tips to help your club
                </p>
              </div>
              <label
                className="heart__icon add-favorite-slider"
                htmlFor="favorite"
              >
                <button
                  id="favorite"
                  name="favorite"
                  onClick={[Function]}
                  type="button"
                >
                   
                </button>
              </label>
              <label
                className="join-to-event__icon join-to-event-slider"
                htmlFor="joinToEvent"
              >
                <button
                  id="joinToEvent"
                  name="joinToEvent"
                  onClick={[Function]}
                  type="button"
                >
                   
                </button>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    
    
  </div>,
  ",",
]
`;

exports[`renders events in different view modes without events should return list 1`] = `null`;

exports[`renders events in different view modes without events should return matrix 1`] = `
<div
  className="event-matrix"
/>
`;

exports[`renders events in different view modes without events should return slider 1`] = `
<div
  className="slick-slider slick-initialized"
>
  
  <div
    className="slick-list"
  >
    <div
      className="slick-track"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "WebkitTransform": "translate3d(0px, 0px, 0px)",
          "WebkitTransition": "",
          "msTransform": "translateX(0px)",
          "opacity": 1,
          "transform": "translate3d(0px, 0px, 0px)",
          "transition": "",
        }
      }
    />
  </div>
  
  
</div>
`;
